# PF_PythonFullStack

./: LICENSE  README.md  manage.py  pendientes.py  pendientes.txt  pyproject copy.toml  pyproject.toml
CROWDFUNDING/: .env  asgi.py  settings copy.py  settings.py  urls.py  wsgi.py
data/: 1categorias_csv1.csv  2campania_csv1.csv  3donacion_csv1.csv  campania.xlsx  campania_csv1este.csv  campania_csv1final.csv  campa¤a.xlsx  campa¤a_csv1 - Copy.csv  campa¤a_csv1.csv  categorias.xlsx  categorias_csv1final.csv  donacion.xlsx  donacion_csv1este.csv  donacion_csv1final.csv  ~$modelos.xlsx
data/Nueva carpeta/: campania_csv.csv  campania_csv2.csv  campania_csv3.csv  donacion_csv.csv
data/Nueva carpeta (2)/: campa¤a.xlsx  campa¤a_csv.csv  categorias.xlsx  categorias_csv.csv  donacion.xlsx  donacion_csv.csv  modelos.xlsx
data/vieja/: categorias_csv1.csv  donacion-Valeria.xlsx  donacion.xlsx  donacion_csv1.csv  donacion_csv11.csv  donacion_csv111.csv  donacion_csv12.csv  donacionnnnn_csv1.csv
donacion/: admin.py  apps.py  models copy 2.py  models copy.py  models.py  tasks.py  urls copy.py  urls.py  views copy.py  views.py
donacion/migrations/: 0001_initial.py  0002_principal_imagen.py  0003_alter_principal_recaudos_and_more.py  0004_alter_principal_recaudos_and_more.py  0005_alter_principal_recaudos_and_more.py  0006_alter_principal_recaudos_and_more.py  0007_rename_recaudos_principal_monto_recaudado_and_more.py  0008_rename_monto_a_recuadar_principal_monto_a_recaudar.py  0017_comentarios.py  (+14 more)
scripts/: campania_csv.py  categorias_csv.py  donacion_csv.py  feeder.py
(+36 files in other folders)
